took out glasses due to nsfw results

--- a/views/pages/tumblrapigame.ejs
+++ b/views/pages/tumblrapigame.ejs
@@ -80,7 +80,7 @@
 
 
 
-let searchTerms = ['pizza', 'snake', 'sharks', 'hog', 'food', 'fire', 'burger', 'landscape', 'fish', 'bottle', 'glasses'];
+let searchTerms = ['pizza', 'snake', 'sharks', 'hog', 'food', 'fire', 'burger', 'landscape', 'fish', 'bottle', 'basketball'];
 let boxes = document.querySelectorAll('.box');
 let search = document.querySelector('.inputField');
 let submission = document.querySelector('.submit');
